# rust-backend-experiment

./: Cargo.toml
migrations/: 0001_starter.sql
src/: main.rs
src/controllers/sections/: create.rs
src/models/: post.rs
