[package]
name = "rust-backend-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
cargo-watch = "8.4.0"
serde = "1.0.162"
sqlx = { version = "0.6.3", features = ["postgres"] }
sqlx-cli = "0.6.3"
tokio = { version = "1.28.0", features = ["full"] }
